Fix error when record in index does not have audit times and listing tries to render them; Fix overlapping q text filter field on smaller viewports;

--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -488,3 +488,9 @@ ul.subrecord-form-list {
   border: 1px solid #ccc;
   border: 1px solid rgba(0,0,0,.2);
 }
+
+
+/* Filter fields */
+.text-filter-field {
+  width: 80%;
+}
