--- a/public/app/assets/stylesheets/archivesspace/common.less
+++ b/public/app/assets/stylesheets/archivesspace/common.less
@@ -327,3 +327,8 @@ section {
   line-height: 22px;
   font-size: 12px;
 }
+
+/* Filter fields */
+.text-filter-field {
+  width: 80%;
+}
